[package]
name = "hyperchat"
version = "1.0.1"
description = "ChatGPT AI Bot."
authors = ["Yancey Leo"]
license = "MIT"
repository = "https://github.com/HyperChatBot/hyperchat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["fs-all", "path-all", "protocol-all", "shell-all", "updater", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
